Organised and corrected contrast

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <h1>Horiseon</h1>
-        <div>
+        <nav>
             <ul>
-                <li><a href="#search-engine-management">Search Engine Optimization</a></li>
+                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
                 <li><a href="#online-reputation-management">Online Reputation Management</a></li>
                 <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
     <div class="hero"></div>
+    <main>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./Assets/images/search-engine-optimization.jpg" class="float-left" alt="Notepad with Components of Search Engine Optimization." />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -65,12 +66,13 @@
             </p>
         </div>
     </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    </main>
+    <footer>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
