--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
         </div>
     </div>
     <div class="benefits">
-        <div class="benefit-lead">
+        <div id="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./Assets/images/lead-generation.png" alt="Gear going into funnel with the output of money." />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div id="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./Assets/images/brand-awareness.png" alt="Torso with a light bulb as its head." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div id="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./Assets/images/cost-management.png" alt="A gear surrounded by coins." />
             <p>
